[package]
name = "style4rs-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "*", features = ["span-locations"] }
style4rs = { path = "../style4rs", version = "*" }
style4rs-util = { path = "../style4rs-util", version = "*" }
syn = { version = "*", features = [ "full", "visit" ] }
time = { version = "*", features = ["formatting", "local-offset", "macros"] }
walkdir = "*"
