[package]
name = "style4rs-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn = { workspace = true, features = [ "full", "visit" ] }
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
walkdir.workspace = true
style4rs = { path = "../style4rs", version = "*" }
style4rs-util = { path = "../style4rs-util", version = "*" }
