[package]
name = "style4rs-macros"
version = "0.0.3"
description = "Scoped CSS for Rust web frameworks like Leptos"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc_macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
style4rs-util = { path = "../style4rs-util", version = "0.0.3" }
