[package]
name = "style4rs-test"
version = "0.0.3"
description = "Independent tests for macros and builder"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
style4rs-macros = { path = "../style4rs-macros" }

[build-dependencies]
style4rs-builder = { path = "../style4rs-builder" }
