[package]
name = "style4rs-util"
version.workspace = true
description = "Commmon functions for style4rs macros and builder"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightningcss = { workspace = true, features = ["visitor"] }
proc-macro2.workspace = true
regex.workspace = true
