[package]
name = "style4rs"
version.workspace = true
description = "Scoped CSS for Rust web frameworks like Leptos"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
style4rs-macros = { path = "../style4rs-macros" }
style4rs-builder = { path = "../style4rs-builder" }
