[package]
name = "style4rs"
version = "0.0.2"
description = "Scoped CSS for Rust web frameworks like Leptos"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
style4rs-macros = { path = "../style4rs-macros", version = "0.0.2" }
style4rs-builder = { path = "../style4rs-builder", version = "0.0.2" }

[dev-dependencies]
leptos = { version = "0.5" }
